[package]
edition = "2024"
name    = "git-touchfish-commit"
version = "0.2.0"

[dependencies]
chrono = "0.4"
confy  = "1"
rand   = "0.9"
serde  = { version = "1", features = ["derive"] }


[[bin]]
name = "git-tc"
path = "src/main.rs"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
